--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-spies": "^0.7.1",
+    "expect": "^1.20.2",
     "jsdom": "^9.0.0",
     "mocha": "^2.4.5",
     "mocha-jsdom": "^1.1.0",
