--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
   },
   "homepage": "https://github.com/learn-co-curriculum/js-basics-online-shopping-lab#readme",
   "devDependencies": {
-    "chai": "^3.5.0",
-    "chai-spies": "^0.7.1",
     "jsdom": "^9.0.0",
     "mocha": "^2.4.5",
-    "mocha-jsdom": "^1.1.0",
     "mocha-multi": "^0.9.0"
+  },
+  "dependencies": {
+    "expect": "^1.20.2"
   }
 }
