--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/learn-co-curriculum/js-basics-online-shopping-lab#readme",
   "devDependencies": {
+    "expect": "^1.20.2",
     "jsdom": "^9.0.0",
     "mocha": "^2.4.5",
     "mocha-multi": "^0.9.0"
