--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   },
   "homepage": "https://github.com/learn-co-curriculum/js-basics-online-shopping-lab#readme",
   "devDependencies": {
+    "babel-core": "^6.11.4",
+    "babel-preset-es2015": "^6.9.0",
     "expect": "^1.20.2",
     "jsdom": "^9.0.0",
     "mocha": "^2.4.5",
