--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha -R mocha-multi --reporter-options nyan=-,json=.results.json"
+    "test": "mocha -R mocha-multi --reporter-options spec=-,json=.results.json"
   },
   "repository": {
     "type": "git",
@@ -32,7 +32,7 @@
     "babel-preset-es2015": "^6.9.0",
     "expect": "^1.20.2",
     "jsdom": "^9.0.0",
-    "mocha": "^2.4.5",
-    "mocha-multi": "^0.9.0"
+    "mocha": "^7.0.1",
+    "mocha-multi": "^1.1.3"
   }
 }
